# vkfft-bindings

./: .gitmodules  Cargo.toml  build.rs  wrapper.h
examples/: ash_fft.rs
src/: lib.rs  shim.cpp  vkfft.rs
