[package]
name = "vkfft-bindings"
version = "0.1.0"
edition = "2021"
links = "vkfft"

[features]
default = []
# Enable Vulkan support via `ash` when you want to run the wrapper, tests, or examples
# that require Vulkan drivers. Example commands:
#   cargo test --features wrapper
#   cargo run --example ash_fft --features "wrapper ash"
ash = ["dep:ash"]
wrapper = ["ash"]
# If you want to control whether VkFFT uses Vulkan headers from your system or vendored ones later,
# add features here.

[dependencies]
ash = { version = "0.38", optional = true }

[build-dependencies]
bindgen = "0.70"
cc = "1.1"

[lib]
path = "src/lib.rs"

